--- a/CHCloudHealth/Base.lproj/Main.storyboard
+++ b/CHCloudHealth/Base.lproj/Main.storyboard
@@ -2676,6 +2676,33 @@
                                                         </mask>
                                                     </variation>
                                                 </view>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qAM-Dz-XaC">
+                                                    <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="K96-7c-5pD">
+                                                            <variation key="widthClass=compact" constant="22"/>
+                                                        </constraint>
+                                                        <constraint firstAttribute="width" constant="50" id="b5u-yb-7pv">
+                                                            <variation key="widthClass=compact" constant="22"/>
+                                                        </constraint>
+                                                    </constraints>
+                                                    <state key="normal" image="ios_refresh"/>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="K96-7c-5pD"/>
+                                                            <exclude reference="b5u-yb-7pv"/>
+                                                        </mask>
+                                                    </variation>
+                                                    <variation key="widthClass=compact">
+                                                        <mask key="constraints">
+                                                            <include reference="K96-7c-5pD"/>
+                                                            <include reference="b5u-yb-7pv"/>
+                                                        </mask>
+                                                    </variation>
+                                                    <connections>
+                                                        <action selector="refreshDataAction:" destination="alt-9q-Gf8" eventType="touchUpInside" id="1cW-rZ-lj7"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="eXQ-Qm-9px" firstAttribute="leading" secondItem="api-8l-0NI" secondAttribute="trailing" constant="49" id="0p9-LO-zW3">
@@ -2726,6 +2753,9 @@
                                                 <constraint firstItem="lNH-Z7-mdP" firstAttribute="leading" secondItem="owg-Ui-9EP" secondAttribute="trailing" constant="3" id="ca9-2m-1zr"/>
                                                 <constraint firstItem="a6a-hA-4YH" firstAttribute="leading" secondItem="eXQ-Qm-9px" secondAttribute="trailing" constant="4" id="fCu-kX-ZhQ"/>
                                                 <constraint firstItem="v7x-5P-ZJr" firstAttribute="top" secondItem="1as-KS-rDW" secondAttribute="topMargin" constant="9" id="hFH-y9-6DV"/>
+                                                <constraint firstItem="qAM-Dz-XaC" firstAttribute="top" secondItem="1as-KS-rDW" secondAttribute="topMargin" constant="14" id="kcv-MU-ifY">
+                                                    <variation key="widthClass=compact" constant="28"/>
+                                                </constraint>
                                                 <constraint firstItem="veH-04-K33" firstAttribute="leading" secondItem="eXQ-Qm-9px" secondAttribute="trailing" constant="4" id="mVa-tU-hSn"/>
                                                 <constraint firstItem="nsH-80-pmx" firstAttribute="top" secondItem="veH-04-K33" secondAttribute="bottom" constant="9" id="nAc-XO-sQY"/>
                                                 <constraint firstItem="cHb-Yr-C2g" firstAttribute="leading" secondItem="a6a-hA-4YH" secondAttribute="trailing" constant="-6" id="nOi-tE-ZVX">
@@ -2733,6 +2763,9 @@
                                                 </constraint>
                                                 <constraint firstItem="36O-se-Apa" firstAttribute="top" secondItem="6HO-Iv-dhT" secondAttribute="bottom" constant="5" id="nlI-K3-Chs"/>
                                                 <constraint firstItem="owg-Ui-9EP" firstAttribute="leading" secondItem="1as-KS-rDW" secondAttribute="leadingMargin" constant="7" id="o2a-eU-vIq"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="qAM-Dz-XaC" secondAttribute="trailing" constant="15" id="oU2-eh-3Lb">
+                                                    <variation key="widthClass=compact" constant="29"/>
+                                                </constraint>
                                                 <constraint firstItem="cHb-Yr-C2g" firstAttribute="top" secondItem="7pQ-YN-pGP" secondAttribute="bottom" constant="15" id="pec-yY-I8j"/>
                                                 <constraint firstItem="nz3-fd-qaR" firstAttribute="leading" secondItem="6HO-Iv-dhT" secondAttribute="trailing" constant="-4" id="s4g-yj-5Yo">
                                                     <variation key="widthClass=compact" constant="2"/>
@@ -2768,48 +2801,51 @@
                                                     <exclude reference="cHb-Yr-C2g"/>
                                                     <exclude reference="XWu-zY-uTn"/>
                                                     <exclude reference="36O-se-Apa"/>
+                                                    <exclude reference="qAM-Dz-XaC"/>
                                                 </mask>
                                                 <mask key="constraints">
-                                                    <exclude reference="JB9-PH-Sd7"/>
-                                                    <exclude reference="DxW-hI-il0"/>
-                                                    <exclude reference="UAS-5I-aId"/>
-                                                    <exclude reference="1Yd-iz-4YO"/>
-                                                    <exclude reference="OkX-wu-TDE"/>
-                                                    <exclude reference="uKv-Un-Piv"/>
-                                                    <exclude reference="WRM-2p-512"/>
-                                                    <exclude reference="fCu-kX-ZhQ"/>
-                                                    <exclude reference="Rdk-xj-9jt"/>
-                                                    <exclude reference="Ceh-gq-bzs"/>
-                                                    <exclude reference="Otq-qQ-tMb"/>
-                                                    <exclude reference="nOi-tE-ZVX"/>
-                                                    <exclude reference="pec-yY-I8j"/>
-                                                    <exclude reference="LWh-Iz-HMH"/>
-                                                    <exclude reference="HBi-j8-a7Y"/>
-                                                    <exclude reference="nAc-XO-sQY"/>
-                                                    <exclude reference="a8F-Mw-nCC"/>
-                                                    <exclude reference="s4g-yj-5Yo"/>
+                                                    <exclude reference="7V1-JL-YPX"/>
+                                                    <exclude reference="o2a-eU-vIq"/>
                                                     <exclude reference="hFH-y9-6DV"/>
                                                     <exclude reference="wC8-aA-cwE"/>
-                                                    <exclude reference="mVa-tU-hSn"/>
-                                                    <exclude reference="sr8-eB-EON"/>
-                                                    <exclude reference="BZZ-0c-vE9"/>
-                                                    <exclude reference="MG3-Qn-ucI"/>
-                                                    <exclude reference="QNv-yX-uSU"/>
-                                                    <exclude reference="RU5-23-Pk6"/>
-                                                    <exclude reference="nlI-K3-Chs"/>
+                                                    <exclude reference="9wE-IG-IhW"/>
+                                                    <exclude reference="ca9-2m-1zr"/>
+                                                    <exclude reference="LWh-Iz-HMH"/>
+                                                    <exclude reference="1Yd-iz-4YO"/>
+                                                    <exclude reference="OkX-wu-TDE"/>
                                                     <exclude reference="6Te-Sq-Xpe"/>
                                                     <exclude reference="LQx-QF-rfE"/>
                                                     <exclude reference="TpD-JW-apM"/>
+                                                    <exclude reference="JB9-PH-Sd7"/>
+                                                    <exclude reference="QNv-yX-uSU"/>
+                                                    <exclude reference="RU5-23-Pk6"/>
+                                                    <exclude reference="nlI-K3-Chs"/>
+                                                    <exclude reference="BZZ-0c-vE9"/>
+                                                    <exclude reference="MG3-Qn-ucI"/>
+                                                    <exclude reference="Rdk-xj-9jt"/>
+                                                    <exclude reference="a8F-Mw-nCC"/>
+                                                    <exclude reference="s4g-yj-5Yo"/>
                                                     <exclude reference="0p9-LO-zW3"/>
                                                     <exclude reference="4la-aC-ZZJ"/>
                                                     <exclude reference="LdB-Ir-yWI"/>
                                                     <exclude reference="O9S-K2-8LT"/>
                                                     <exclude reference="yvq-A4-168"/>
                                                     <exclude reference="yw8-QH-91M"/>
-                                                    <exclude reference="9wE-IG-IhW"/>
-                                                    <exclude reference="ca9-2m-1zr"/>
-                                                    <exclude reference="7V1-JL-YPX"/>
-                                                    <exclude reference="o2a-eU-vIq"/>
+                                                    <exclude reference="uKv-Un-Piv"/>
+                                                    <exclude reference="mVa-tU-hSn"/>
+                                                    <exclude reference="sr8-eB-EON"/>
+                                                    <exclude reference="HBi-j8-a7Y"/>
+                                                    <exclude reference="nAc-XO-sQY"/>
+                                                    <exclude reference="WRM-2p-512"/>
+                                                    <exclude reference="fCu-kX-ZhQ"/>
+                                                    <exclude reference="Ceh-gq-bzs"/>
+                                                    <exclude reference="Otq-qQ-tMb"/>
+                                                    <exclude reference="DxW-hI-il0"/>
+                                                    <exclude reference="UAS-5I-aId"/>
+                                                    <exclude reference="kcv-MU-ifY"/>
+                                                    <exclude reference="oU2-eh-3Lb"/>
+                                                    <exclude reference="nOi-tE-ZVX"/>
+                                                    <exclude reference="pec-yY-I8j"/>
                                                 </mask>
                                             </variation>
                                             <variation key="widthClass=compact">
@@ -2833,48 +2869,51 @@
                                                     <include reference="cHb-Yr-C2g"/>
                                                     <include reference="XWu-zY-uTn"/>
                                                     <include reference="36O-se-Apa"/>
+                                                    <include reference="qAM-Dz-XaC"/>
                                                 </mask>
                                                 <mask key="constraints">
-                                                    <include reference="JB9-PH-Sd7"/>
-                                                    <include reference="DxW-hI-il0"/>
-                                                    <include reference="UAS-5I-aId"/>
-                                                    <include reference="1Yd-iz-4YO"/>
-                                                    <include reference="OkX-wu-TDE"/>
-                                                    <include reference="uKv-Un-Piv"/>
-                                                    <include reference="WRM-2p-512"/>
-                                                    <include reference="fCu-kX-ZhQ"/>
-                                                    <include reference="Rdk-xj-9jt"/>
-                                                    <include reference="Ceh-gq-bzs"/>
-                                                    <include reference="Otq-qQ-tMb"/>
-                                                    <include reference="nOi-tE-ZVX"/>
-                                                    <include reference="pec-yY-I8j"/>
-                                                    <include reference="LWh-Iz-HMH"/>
-                                                    <include reference="HBi-j8-a7Y"/>
-                                                    <include reference="nAc-XO-sQY"/>
-                                                    <include reference="a8F-Mw-nCC"/>
-                                                    <include reference="s4g-yj-5Yo"/>
+                                                    <include reference="7V1-JL-YPX"/>
+                                                    <include reference="o2a-eU-vIq"/>
                                                     <include reference="hFH-y9-6DV"/>
                                                     <include reference="wC8-aA-cwE"/>
-                                                    <include reference="mVa-tU-hSn"/>
-                                                    <include reference="sr8-eB-EON"/>
-                                                    <include reference="BZZ-0c-vE9"/>
-                                                    <include reference="MG3-Qn-ucI"/>
-                                                    <include reference="QNv-yX-uSU"/>
-                                                    <include reference="RU5-23-Pk6"/>
-                                                    <include reference="nlI-K3-Chs"/>
+                                                    <include reference="9wE-IG-IhW"/>
+                                                    <include reference="ca9-2m-1zr"/>
+                                                    <include reference="LWh-Iz-HMH"/>
+                                                    <include reference="1Yd-iz-4YO"/>
+                                                    <include reference="OkX-wu-TDE"/>
                                                     <include reference="6Te-Sq-Xpe"/>
                                                     <include reference="LQx-QF-rfE"/>
                                                     <include reference="TpD-JW-apM"/>
+                                                    <include reference="JB9-PH-Sd7"/>
+                                                    <include reference="QNv-yX-uSU"/>
+                                                    <include reference="RU5-23-Pk6"/>
+                                                    <include reference="nlI-K3-Chs"/>
+                                                    <include reference="BZZ-0c-vE9"/>
+                                                    <include reference="MG3-Qn-ucI"/>
+                                                    <include reference="Rdk-xj-9jt"/>
+                                                    <include reference="a8F-Mw-nCC"/>
+                                                    <include reference="s4g-yj-5Yo"/>
                                                     <include reference="0p9-LO-zW3"/>
                                                     <include reference="4la-aC-ZZJ"/>
                                                     <include reference="LdB-Ir-yWI"/>
                                                     <include reference="O9S-K2-8LT"/>
                                                     <include reference="yvq-A4-168"/>
                                                     <include reference="yw8-QH-91M"/>
-                                                    <include reference="9wE-IG-IhW"/>
-                                                    <include reference="ca9-2m-1zr"/>
-                                                    <include reference="7V1-JL-YPX"/>
-                                                    <include reference="o2a-eU-vIq"/>
+                                                    <include reference="uKv-Un-Piv"/>
+                                                    <include reference="mVa-tU-hSn"/>
+                                                    <include reference="sr8-eB-EON"/>
+                                                    <include reference="HBi-j8-a7Y"/>
+                                                    <include reference="nAc-XO-sQY"/>
+                                                    <include reference="WRM-2p-512"/>
+                                                    <include reference="fCu-kX-ZhQ"/>
+                                                    <include reference="Ceh-gq-bzs"/>
+                                                    <include reference="Otq-qQ-tMb"/>
+                                                    <include reference="DxW-hI-il0"/>
+                                                    <include reference="UAS-5I-aId"/>
+                                                    <include reference="kcv-MU-ifY"/>
+                                                    <include reference="oU2-eh-3Lb"/>
+                                                    <include reference="nOi-tE-ZVX"/>
+                                                    <include reference="pec-yY-I8j"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
@@ -3839,5 +3878,6 @@
         <image name="ios_icon_15" width="18" height="18"/>
         <image name="ios_icon_16" width="27" height="27"/>
         <image name="ios_icon_18" width="24" height="24"/>
+        <image name="ios_refresh" width="22" height="22"/>
     </resources>
 </document>
